fix close button for oney popin on mobile device

--- a/views/css/less/component/oney/popin.less
+++ b/views/css/less/component/oney/popin.less
@@ -302,10 +302,6 @@
     &:after {
       .transform(translate(-50%, -50%) rotate(-45deg));
     }
-
-    @media (@mobile) {
-      display: none;
-    }
   }
 
   &_error {
